crates/ts/tests/snapshots/baseline_behavioral__baseline_css_class_prefix_changed.snap
---
source: crates/ts/tests/baseline_behavioral.rs
expression: "css_diff(r#\"className=\"pf-v5-c-button pf-v5-c-button--primary\"\"#,\nr#\"className=\"pf-v6-c-button pf-v6-c-button--primary\"\"#, \"Button\",)"
---
- symbol: Button
  category: CssClass
  description: "CSS class prefix 'pf-v5-c-button' removed from source"
  before: pf-v5-c-button
  after: ~
- symbol: Button
  category: CssClass
  description: "CSS class prefix 'pf-v5-c-button--primary' removed from source"
  before: pf-v5-c-button--primary
  after: ~
- symbol: Button
  category: CssClass
  description: "CSS class prefix 'pf-v6-c-button' added to source"
  before: ~
  after: pf-v6-c-button
- symbol: Button
  category: CssClass
  description: "CSS class prefix 'pf-v6-c-button--primary' added to source"
  before: ~
  after: pf-v6-c-button--primary
