crates/ts/tests/snapshots/baseline_behavioral__baseline_css_no_refs_returns_empty.snap
---
source: crates/ts/tests/baseline_behavioral.rs
expression: "css_diff(\"const x = 42;\", \"const x = 43;\", \"foo\",)"
---
[]
