crates/ts/tests/snapshots/baseline_behavioral__baseline_css_var_unchanged.snap
---
source: crates/ts/tests/baseline_behavioral.rs
expression: "css_diff(r#\"const color = \"var(--pf-v5-global--Color--100)\";\"#,\nr#\"const color = \"var(--pf-v5-global--Color--100)\";\"#, \"Comp\",)"
---
[]
