crates/ts/tests/snapshots/baseline_behavioral__baseline_jsx_aria_attribute_removed.snap
---
source: crates/ts/tests/baseline_behavioral.rs
expression: "jsx_diff(r#\"{ return <button aria-labelledby=\"title\">Click</button>; }\"#,\n\"{ return <button>Click</button>; }\", \"MyButton\",)"
---
- symbol: MyButton
  category: Accessibility
  description: aria-labelledby attribute removed from <button>
  before: "aria-labelledby=\"title\""
  after: ~
