crates/ts/tests/snapshots/baseline_behavioral__baseline_jsx_css_class_removed.snap
---
source: crates/ts/tests/baseline_behavioral.rs
expression: "jsx_diff(r#\"{ return <div className=\"pf-v5-c-button pf-m-primary\">btn</div>; }\"#,\nr#\"{ return <div className=\"pf-v6-c-button pf-m-primary\">btn</div>; }\"#,\n\"Button\",)"
---
- symbol: Button
  category: CssClass
  description: "CSS class 'pf-v5-c-button' removed from render output"
  before: pf-v5-c-button
  after: ~
- symbol: Button
  category: CssClass
  description: "CSS class 'pf-v6-c-button' added to render output"
  before: ~
  after: pf-v6-c-button
